--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstbite",
+  "name": "firstbite-lol",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,16 +11,13 @@
   "dependencies": {
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "next": "16.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.1"
   }
 }
